Fix scroll on mobile

--- a/joke/static/joke/css/base.css
+++ b/joke/static/joke/css/base.css
@@ -1,6 +1,7 @@
 body, html {
 height: 100%;
-overflow: hidden;
+/* overflow: hidden; */
+background-attachment: fixed;
 }
 body {
     /* The image used */
